# squidbot

./: .env.example  .env.test.example  .gitignore  Cargo.toml  compose.yaml  config.example.json  random_message_templates.example.json  remigrate.sh
bot/: Cargo.toml
bot/src/: controllers.rs  main.rs
data/: Cargo.toml
data/src/: fetch.rs  interface.rs  lib.rs  pronouns.rs
data/src/interface/: alias.rs  campaign.rs  censor.rs  player.rs  post_interface.rs  pronouns.rs  pronouns_map.rs  sender.rs
migrations/: 20240211041331_tables.down.sql  20240211041331_tables.up.sql  20240211050328_views.down.sql  20240211050328_views.up.sql  20240211050333_functions.down.sql  20240211050333_functions.up.sql
parse/: Cargo.toml
parse/src/: lib.rs  parse_config.rs  parse_dicemath.rs  parse_fantasy_grounds.rs  parse_foundry.rs  parse_random_message_templates.rs  parse_roll_20.rs  util.rs
test_files/: fg_test_campaign.html  fnd_test_campaign.db  r20_test_campaign.html  test_config.json  test_config_update.json  test_random_message_templates.json
tests/: Cargo.toml  test_data.rs  test_parse.rs
