[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = { version = "0.6.1", features = ["cache"] }
tokio = { version = "1.36.0", features = ["full"] }
parse = { path = "../parse" }
data = { path = "../data" }