[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = { version = "0.6.1", features = ["cache"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
parse = { path = "../parse" }
data = { path = "../data" }
rayon = "1.8.1"
rand = "0.8.5"
sqlx = { version = "0.7", features = [ "chrono" ] }