[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes" ] }
futures = "0.3.30"
rayon = "1.8.1"
sqlx = { version = "0.7", features = [ "runtime-async-std", "postgres", "chrono", "bigdecimal" ] }
dotenv = "0.15.0"
parse = { path = "../parse" }