[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
dotenv = "0.15.0"
parse = { path = "../parse" }
rand = "0.8.5"