[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
async-std = { version = "1.12.0" }
serial_test = "3.0.0"
parse = { path = "../parse" }
data = { path = "../data" }
sqlx = { version = "0.7", features = [ "runtime-async-std", "postgres", "chrono", "bigdecimal" ] }

[[test]]
name = "test_parse"
path = "test_parse.rs"

[[test]]
name = "test_data"
path = "test_data.rs"