[package]
name = "tests"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serial_test = "3.0.0"
parse = { path = "../parse" }
data = { path = "../data" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono", "bigdecimal" ] }

[[test]]
name = "test_parse"
path = "test_parse.rs"

[[test]]
name = "test_data"
path = "test_data.rs"
